--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,5 @@
 spring:
+
   datasource:
     url: jdbc:mysql://localhost:3306/shop?useSSL=false&serverTimezone=UTC&characterEncoding=UTF-8
     username: root           # 数据库用户名
@@ -18,6 +19,8 @@ spring:
     encoding: UTF-8
     servlet:
       content-type: text/html
+    prefix: classpath:/templates/     # 指定 Thymeleaf 模板所在的目录
+    suffix: .html                    # 指定 Thymeleaf 文件扩展名
 
   # 连接池配置（HikariPool）
   datasource.hikari:
@@ -36,3 +39,4 @@ wm:
     - /users/login
     - /items/**
     - /hi
+
